w00t        2006/04/14 01:15:06 UTC	(20060414-5055)
  Log:
  Rework of regex_match to not be so .. interesting. Needed for barafranca bits and pieces.

  Changes:	Modified:
  +1 -2		trunk/include/extern.h (File Modified) 
  +20 -8	trunk/src/function.c (File Modified) 


jilles      2006/04/13 10:59:42 UTC	(20060413-5053)
  Log:
  Disable modrestart, it cannot possibly work. Modrestart
  would require some stuff in core.
  

  Changes:	Modified:
  +7 -0		trunk/modules/operserv/modrestart.c (File Modified) 


jilles      2006/04/11 22:17:35 UTC	(20060411-5051)
  Log:
  Don't send a CHGHOST and associated notices if the host was unchanged,
  e.g. same cloak on auth{} block and services.
  

  Changes:	Modified:
  +9 -1		trunk/modules/nickserv/vhost.c (File Modified) 
  +8 -0		trunk/modules/userserv/vhost.c (File Modified) 


nenolod     2006/04/11 00:11:00 UTC	(20060411-5049)
  Log:
  oops that code needed to go

  Changes:	Modified:
  +0 -9		trunk/contrib/wumpus.c (File Modified) 


nenolod     2006/04/10 04:27:47 UTC	(20060410-5045)
  Log:
  - remove this. i didn't mean to commit it
  

  Changes:	Modified:
  +0 -142	trunk/contrib/os_fuckover.c (File Deleted) 


nenolod     2006/04/10 02:00:30 UTC	(20060410-5043)
  Log:
  - make things less confusing

  Changes:	Modified:
  +5 -10	trunk/contrib/wumpus.c (File Modified) 


nenolod     2006/04/10 01:51:52 UTC	(20060410-5041)
  Log:
  - refactor shoot_player(). per Aerdan.
  

  Changes:	Modified:
  +31 -19	trunk/contrib/wumpus.c (File Modified) 


nenolod     2006/04/10 01:37:02 UTC	(20060410-5039)
  Log:
  - make things harder
  

  Changes:	Modified:
  +3 -2		trunk/contrib/wumpus.c (File Modified) 


nenolod     2006/04/10 01:35:30 UTC	(20060410-5037)
  Log:
  - more sanity checking
  

  Changes:	Modified:
  +8 -0		trunk/contrib/wumpus.c (File Modified) 


nenolod     2006/04/10 01:07:59 UTC	(20060410-5035)
  Log:
  - fix improper use of msg()
  

  Changes:	Modified: